--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,12 +1,12 @@
 <view class="page-background">
   <image src="../../static/tjbk.png" class="background-image"></image>
   
-  <image src="../../static/mine.png" style="height: 30px;width: 60px;margin-top: 8%;" bindtap="toMine"></image>
-
+  <image src="../../static/mine_2.png" style="height:28px;width:28px;margin-top:14%;margin-left:64%;border-radius:40px;border:0.5px solid rgba(0, 0, 0, 0.5);wxcs_style_border:1rpx solid rgba(0, 0, 0, 0.5);" bindtap="toMine"></image>
+  
   <view class="navbar">
     <text class="title active">上传图片</text>
     <text class="title">书法风格</text>
-    <text class="title">获取评分</text>
+    <text class="title">书法评分</text>
   </view>
   
   <view class="navbar">
