--- a/miniprogram/pages/ocrerror/ocrerror.wxml
+++ b/miniprogram/pages/ocrerror/ocrerror.wxml
@@ -1,2 +1,28 @@
-<!--pages/ocrerror/ocrerror.wxml-->
-<text>pages/ocrerror/ocrerror.wxml</text>
+<view class="page-background">
+  <image src="../../static/left_2.png" style="height:28px;width:28px;margin-top:8%;margin-left:0%;" bindtap="back"></image>
+  
+  <image src="../../static/mine_2.png" style="height:28px;width:28px;margin-top:14%;margin-left:56%;border-radius:40px;border:0.5px solid rgba(0, 0, 0, 0.5);wxcs_style_border:1rpx solid rgba(0, 0, 0, 0.5);" bindtap="toMine"></image>
+  
+  <view class="navbar">
+    <text class="title">上传图片</text>
+    <text class="title active">书法风格</text>
+    <text class="title">书法评分</text>
+  </view>
+
+  <view class="navbar">
+    <div class="dot"></div>
+    <div class="dot active"></div>
+    <div class="dot"></div>
+  </view>
+
+
+  <view style="display:flex;justify-content: center;">
+    <image src="{{selectedBase64}}" style="width: 300px;height: 300px;" />
+  </view>
+
+  <view class="input-view">
+    <input class="input" maxlength="1" bindinput="bindKeyInput" placeholder="点击输入正确的汉字" />
+  </view>
+
+  <view class="card" mode="aspectFit" bindtap="confirmed">确认</view>
+</view>
