--- a/miniprogram/pages/ocrerror/ocrerror.wxss
+++ b/miniprogram/pages/ocrerror/ocrerror.wxss
@@ -1,1 +1,101 @@
-/* pages/ocrerror/ocrerror.wxss */
+page {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    background: linear-gradient(144.56deg, rgba(255, 255, 255, 0.6) 16.73%, rgba(230, 232, 237, 0.6) 85.71%);
+  }
+  
+  .page-background {
+    position: relative; /* 确保子元素的绝对定位是相对于该元素 */
+    width: 100%; /* 容器宽度，根据需要调整 */
+    height: 100%; /* 容器高度，根据需要调整 */
+  }
+  
+  .navbar {
+    display: flex;
+    justify-content: space-around;
+    padding: 5px;
+  }
+  
+  .title {
+    font-size: 18px;
+    text-align: center;
+    color: #00093b63;
+  }
+  .title.active{
+    color: #29354F;
+  }
+  
+  .dot {
+    width: 8px; /* 圆点大小 */
+    height: 8px; /* 圆点大小 */
+    border-radius: 5px; /* 圆点半径 */
+    background-color: #00093B38; /* 非活动圆点颜色 */
+    margin: 0 5px; /* 圆点间隔 */
+  }
+  .dot.active {
+    background-color: #29354F;
+  }
+  .title-container{
+    display:flex;
+    align-items:center;
+    width: 100%;
+    margin: 10% auto 3%;
+  }
+  .left-title{
+    font-size: 16px;
+    color: #8798BA;
+    flex-grow: 1;
+  }
+  .right-title{
+    font-size: 16px;
+    width:40%;
+    color: #8798BA;
+  }
+  
+  .right-notice{
+    font-size: 13px; 
+    color: #8798BA;
+  }
+  .left-notice{
+    font-size: 14px;
+    width:80%;
+    color: #8798BA;
+  }
+  
+  .line{
+    width: 80%;
+    height: 2px;
+    background: linear-gradient(90deg, #8798BA 1.0%, #8798BA 70%);
+    margin: auto;
+  }
+  .input-view{
+    display:flex;
+    align-items:center;
+    width: 110%;
+    margin: 10% auto 3%;
+  }
+  .input{
+    font-size: 18px;
+    display:flex;
+    justify-content: center;
+    width: 100%;
+  }
+  
+  
+.card {
+  border-radius: 20px;
+  margin: auto;
+  margin-top: 12%;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+  border: 1rpx solid rgba(0, 0, 0, 0.1); 
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  width: 80%;
+  font-size: 18px;
+  color: #8798BA;
+  height: 58px;
+  background: #F0F1F5;
+}
