--- a/miniprogram/pages/split/split.wxml
+++ b/miniprogram/pages/split/split.wxml
@@ -1,10 +1,14 @@
 <view class="page-background">
-  <image src="../../static/mine.png" style="height: 30px;width: 60px;margin-top: 8%;" bindtap="toMine"></image>
-
+  <image src="../../static/left_2.png" style="height:28px;width:28px;margin-top:8%;margin-left:0%;" bindtap="back"></image>
+  
+  <!-- <image src="../../static/mine.png" style="height: 35px;width: 30px;margin-top:14%;margin-left: 60%;" bindtap="toMine"></image>
+   -->
+   <image src="../../static/mine_2.png" style="height:28px;width:28px;margin-top:14%;margin-left:56%;border-radius:40px;border:0.5px solid rgba(0, 0, 0, 0.5);wxcs_style_border:1rpx solid rgba(0, 0, 0, 0.5);" bindtap="toMine"></image>
+  
   <view class="navbar">
     <text class="title active">上传图片</text>
     <text class="title">书法风格</text>
-    <text class="title">获取评分</text>
+    <text class="title">书法评分</text>
   </view>
 
   <view class="navbar">
@@ -31,4 +35,5 @@
   </scroll-view>
 
   <view class="card" mode="aspectFit" bindtap="confirmed">确认</view>
+  <!-- <view class="card_return_last" mode="aspectFit" bindtap="back">返回上一页</view> -->
 </view>
